--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,73 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+/* border: .5rem solid black; */
+/* 
+  #FFC700
+  #0038FF 
+*/
+hr{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+span{
+  color: lightcoral;
+}
+h1{
+  font-size: 3rem;
+}
+p{
+  font-size: 1rem;
+}
+.space-10{
+  min-height: 10rem;
+}
+.space-10{
+  min-height: 5rem;
+}
+.container{
+  display: grid;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+}
+
+/* Navbar Start */
+
+.navbar-1{
+  width: 90vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+  padding: 1.5rem;
+}
+.navbar-1 img{
+  width: 5rem;
+}
+.navbar-1 .links{
+  display: flex;
+  gap: 1.5rem;
+  justify-content: end;
+  align-items: center;
+}
+.navbar-1 .links a{
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+  border-bottom: .2rem solid transparent;
+}
+.navbar-1 .links a:hover{
+  color: black;
+  border-bottom: .2rem solid black;
+  text-decoration: none;
+}
+/* Navbar End */
+
