--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ p{
 .navbar-1 .links{
   display: flex;
   gap: 1.5rem;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .navbar-1 .links a{
