--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,83 @@ p{
 }
 /* Navbar End */
 
+/* Hero Start */
+.hero1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+  /* border: .5rem solid black; */
+  width: 90vw;
+  padding: 1.5rem;
+}
+.hero1 .text{
+  display: grid;
+  align-self: center;
+  /* border: .5rem solid black; */
+}
+.hero1 h1{
+  font-size: 4rem;
+}
+.hero1 button{
+  display: grid;
+  justify-self: start;
+  min-height: 2rem;
+  padding: 1rem;
+  background-color: black;
+  border: .2rem solid black;
+  color: white;
+  font-size: 1rem;
+}
+.hero1 button:hover{
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
+.hero1 .image{
+  display: grid;
+  /* border: .5rem solid black; */
+  justify-items: center;
+  align-items: center;
+}
+.hero1 img{
+  width: 90%;
+  box-shadow: 1rem 1rem black;
+  border-radius: 1rem;
+}
+/* Hero End */
+
+/* Body Start */
+.body-1{
+  width: 90vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  padding: 1.5rem;
+  
+}
+.body-1 .text{
+  padding: 1.5rem;
+}
+.body-1 .cards{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+  padding: 1.5rem;
+}
+.body-1 .card{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  padding: 1.5rem;
+  border: .3rem solid black;
+  box-shadow: .5rem .5rem black;
+}
+.body-1 .card:hover{
+  cursor: pointer;
+  color: white !important;
+  background-color: black;
+}
+.body-1 img{
+  width: 100%;
+}
+/* Body End */
