adding blobs background

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 
+
+
+#000000
+#412728
+#7F4D3E
+#B87C4C
+#E2B659
+#F9F871
+
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,6 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
@@ -31,7 +44,7 @@ hr{
   margin-bottom: 1rem;
 }
 span{
-  color: lightcoral;
+  color: #B87C4C;
 }
 h1{
   font-size: 3rem;
@@ -55,6 +68,12 @@ p{
   background-position: center;
   background-repeat: no-repeat;
   width: 100vw;
+}
+
+.background{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
 }
 
 /* Navbar Start */
@@ -96,11 +115,13 @@ p{
   /* border: .5rem solid black; */
   width: 90vw;
   padding: 1.5rem;
+  position: relative;
 }
 .hero1 .text{
   display: grid;
   align-self: center;
   /* border: .5rem solid black; */
+  
 }
 .hero1 h1{
   font-size: 4rem;
@@ -126,7 +147,7 @@ p{
   justify-items: center;
   align-items: center;
 }
-.hero1 img{
+.hero1 .image img{
   width: 90%;
   border: .3rem solid black;
   box-shadow: .5rem .5rem black;
@@ -148,7 +169,7 @@ p{
 .body-1 .cards{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1.5rem;
+  gap: 4rem;
   padding: 1.5rem;
 }
 .body-1 .card{
