--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ hr{
   margin-bottom: 1rem;
 }
 span{
-  color: #B87C4C;
+  color: #7172F9;
 }
 h1{
   font-size: 3rem;
@@ -58,8 +58,8 @@ p{
 .space-10{
   min-height: 10rem;
 }
-.space-10{
-  min-height: 5rem;
+.space-2{
+  min-height: 2rem;
 }
 .container{
   display: grid;
@@ -75,6 +75,20 @@ p{
   z-index: -1;
   width: 100%;
 }
+.circle_up{
+  position: absolute;
+  bottom:0;
+  left: 20rem;
+  z-index: -1;
+  width: 100%;
+}
+.circle_down{
+  position: absolute; 
+  z-index: -1;
+  width: 100%;
+  bottom: 0;
+}
+
 
 /* Navbar Start */
 
@@ -116,6 +130,7 @@ p{
   width: 90vw;
   padding: 1.5rem;
   position: relative;
+  justify-content: end;
 }
 .hero1 .text{
   display: grid;
@@ -124,7 +139,7 @@ p{
   
 }
 .hero1 h1{
-  font-size: 4rem;
+  font-size: 6rem;
 }
 .hero1 button{
   display: grid;
@@ -148,9 +163,10 @@ p{
   align-items: center;
 }
 .hero1 .image img{
-  width: 90%;
-  border: .3rem solid black;
-  box-shadow: .5rem .5rem black;
+  margin-top: 5rem;
+  min-width: 100%;
+  /* border: .3rem solid black;
+  box-shadow: .5rem .5rem black; */
 }
 /* Hero End */
 
@@ -198,7 +214,7 @@ p{
   gap: 1.5rem;
   padding: 1.5rem;
   align-items: end;
-  
+  position: relative;
 }
 .body-2 img{
   width: 100%;
