--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,20 @@ code {
   #FFC700
   #0038FF 
 */
+
+#root{
+  display: grid;
+  justify-content: center;
+  width: 100vw;
+  overflow-y: visible;
+  overflow-x: hidden;
+}
 hr{
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 span{
   color: #7172F9;
-}
-h1{
-  font-size: 6rem;
 }
 h3{
   font-size: 1.5rem;
@@ -120,6 +125,9 @@ p{
 }
 .navbar-1 img{
   width: 5rem;
+  /* border-radius: 50%; */
+  border: .3rem solid black;
+  box-shadow: .5rem .5rem black;
 }
 .navbar-1 .links{
   display: flex;
@@ -137,6 +145,12 @@ p{
   color: black;
   border-bottom: .2rem solid black;
   text-decoration: none;
+}
+.navbar-1 .links h3{
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+  border-bottom: .2rem solid transparent;
 }
 /* Navbar End */
 
@@ -157,9 +171,9 @@ p{
   /* border: .5rem solid black; */
   
 }
-/* .hero1 h1{
-  
-} */
+.hero1 h1{
+  font-size: 6rem;
+}
 .hero1 button{
   display: grid;
   justify-self: start;
@@ -183,7 +197,7 @@ p{
 }
 .hero1 .image img{
   margin-top: 5rem;
-  min-width: 100%;
+  max-width: 80%;
   /* border: .3rem solid black;
   box-shadow: .5rem .5rem black; */
 }
@@ -207,7 +221,7 @@ p{
   width: 80%;
 }
 .cards-1 h1{
-  font-size: 6rem;
+  font-size: 5rem;
   position: relative;
 }
 .cards-1 .text{
@@ -248,6 +262,7 @@ p{
   padding: 1.5rem;
   position: relative;
   justify-content: end;
+  justify-self: center;
 }
 
 .body-1 .image{
@@ -258,7 +273,8 @@ p{
 }
 .body-1 .image img{
   margin-top: 5rem;
-  min-width: 100%;
+  /* min-width: 100%; */
+  max-width: 100%;
   border: .3rem solid black;
   box-shadow: .5rem .5rem black;
 }
@@ -266,7 +282,7 @@ p{
   padding: 1.5rem;
 }
 .body-1 h1{
-  font-size: 6rem;
+  font-size: 5rem;
   position: relative;
 }
 .body-1 button{
@@ -296,6 +312,7 @@ p{
   padding: 1.5rem;
   position: relative;
   justify-content: end;
+  justify-self: center;
 }
 .body-2 .image{
   display: grid;
@@ -310,12 +327,19 @@ p{
   border: .3rem solid black;
   box-shadow: .5rem .5rem black;
 }
+.body-2 .image .map{
+  margin-top: 5rem;
+  width: 90%;
+  /* min-width: 100%; */
+  border: .3rem solid black;
+  box-shadow: .5rem .5rem black;
+}
 .body-2 .text{
   padding: 1.5rem;
   align-self: center;
 }
 .body-2 h1{
-  font-size: 6rem;
+  font-size: 5rem;
   position: relative;
 }
 .body-2 button{
@@ -337,16 +361,33 @@ p{
 
 /* Footer Start */
 .footer-1{
-  width: 90vw;
+  width: 100vw;
   display: grid;
-  grid-template-columns: 5fr 1fr 1fr 1fr;
+  grid-template-columns: 5fr 1fr 2fr;
   gap: 1.5rem;
+  padding: 5rem;
 }
 .footer-1 .links{
   display: flex;
   flex-direction: column;
 }
 .footer-1 img{
-  width: 5rem;
+  width: 8rem;
+  /* border-radius: 50%; */
+  border: .3rem solid white;
+  box-shadow: .5rem .5rem black;
+}
+
+.footer-1 h3{
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.footer-1 h3{
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.copyright{
+  margin: auto;
+  padding: 3rem;
 }
 /* Footer End */
